[tool.poetry]
name = "praetorian-api-client"
version = "0.2.0"
description = "API Client for praetorian-api project."
authors = ["Adam Žúrek <adamzurek14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
